# llm-test

./: .gitignore  README.md  REPRO_ASSUMPTIONS.md  pyproject.toml  requirements.txt
configs/: default.yaml  multimodal_with_retrieval.yaml  text_only.yaml
docs/: reproduction_plan.md
scripts/: ablate.py  evaluate.py  preprocess_image.py  preprocess_text.py  run_ablation.py  sample_video_frames.py  smoke_test.py  train.py  train_image_only.py  train_multimodal.py  train_multimodal_with_retrieval.py  train_text_only.py
src/sentimm_repro/: __init__.py  config.py  labels.py  metrics.py  pipeline.py  types.py
src/sentimm_repro/agents/: classifier_aggregator.py  fusion_inspector.py  image_analyst.py  kb_assistant.py  text_analyst.py
src/sentimm_repro/data/: dataset.py
src/sentimm_repro/models/: torch_head.py
src/sentimm_repro/retrieval/: kb_index.py
tests/: test_pipeline.py
